force-app/main/default/objects/KimbleOne__DeliveryElementIntercompanySummary__c/KimbleOne__DeliveryElementIntercompanySummary__c.object-meta.xml
<CustomObject>
    <label>Delivery Element Intercompany Summary</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Delivery Element Intercompany Summary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Element Intercompany Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>