force-app/main/default/objects/KimbleOne__DeliveryElementIntercompanySummary__c/fields/KimbleOne__BusinessUnitIntercompanySummary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnitIntercompanySummary__c</fullName>
    <label>Business Unit Intercompany Summary</label>
    <referenceTo>KimbleOne__BusinessUnitIntercompanySummary__c</referenceTo>
    <relationshipLabel>Delivery Element Intercompany Summary</relationshipLabel>
    <relationshipName>DeliveryElementIntercompanySummary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>