force-app/main/default/objects/KimbleOne__DeliveryElementIntercompanySummary__c/fields/KimbleOne__IntInvCcyExpensesInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyExpensesInvoiceableAmount__c</fullName>
    <label>Expenses Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>