force-app/main/default/objects/KimbleOne__DeliveryElementIntercompanySummary__c/fields/KimbleOne__IntInvCcyServicesInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyServicesInvoiceableAmount__c</fullName>
    <label>Services Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>